[package]
name = "bulkcp"
version = "0.1.2"
edition = "2021"
description = "Simple command line bulk copying tool"
readme = "README.md"
repository = "https://github.com/underscoreevelyn/bulkcp"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
